--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: CHEMENG 444 / ENERGY 256 Winter 2016
+title: CBE 544  2016
 subtitle: 
-url: "http://chemeng444.github.io"
+url: "http://CBE544.github.io"
 baseurl: ""
 
 # Build settings
