--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: CBE544 2017
+title: CBE544 2018
 subtitle: 
-url: "http://CBE544.github.io"
+url: "http://CBE544-2018.github.io"
 baseurl: ""
 
 # Build settings
